<resources>
    <!-- App and Activities titles -->
    <string name="app_name">Popular Movies Stage 1</string>
    <string name="main_activity_title">Popular Movies</string>
    <string name="details_activity_title">Movie Details</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="content_description">Image</string>
    <!-- Empty View Titles -->
    <string name="empty_view_title_text">You do not have any Movie</string>
    <string name="empty_view_subtitle_text">An error has occurred. Please try again by clicking REFRESH</string>
    <!-- Error messages -->
    <string name="details_error_loading_data">Error loading data</string>
    <string name="no_data_found_message">No data found</string>
    <!-- DetailsActivity Titles -->
    <string name="release_date">Release Date: </string>
    <string name="vote_average">Vote Average: </string>
    <string name="plot_synopsis">Plot Synopsis: </string>

    <!-- Strings For Order-By Preference -->
    <string name="settings_sort_by_label">Sort By</string>
    <string name="settings_sort_by_key" translatable="false">sort_by</string>
    <string name="settings_sort_by_default" translatable="false">@string/settings_sort_by_most_popular_value</string>
    <!-- Label for order-by most popular -->
    <string name="settings_sort_by_most_popular_label">Most Popular</string>
    <string name="settings_sort_by_most_popular_value" translatable="false">popularity.desc</string>
    <!-- Label for order-by highest rated-->
    <string name="settings_sort_by_highest_rated_label">Highest Rated</string>
    <string name="settings_sort_by_highest_rated_value" translatable="false">vote_average.desc</string>
</resources>
