<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".MovieDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/normal_margin">

        <TextView
            android:id="@+id/tv_original_title"
            style="@style/details_original_title"
            tools:text="Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_poster_detail"
                style="@style/poster_image_details" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:orientation="vertical">
                <TextView
                    style="@style/primary_text_details"
                    android:text="@string/release_date" />
                <TextView
                    android:id="@+id/tv_release_date"
                    style="@style/secondary_text_details"
                    tools:text="Release Date" />
                <TextView
                    style="@style/primary_text_details"
                    android:text="@string/vote_average" />
                <TextView
                    android:id="@+id/tv_user_rating"
                    style="@style/secondary_text_details"
                    tools:text="User Rating" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/primary_text_details"
            android:text="@string/plot_synopsis" />
        <TextView
            android:id="@+id/tv_overview"
            style="@style/secondary_text_details"
            android:layout_marginBottom="@dimen/normal_margin"
            tools:text="Description" />
    </LinearLayout>
</ScrollView>